--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -1,8 +1,7 @@
 <html>
    <body>
        <h1>Success!</h1>
-        <p>The file was successfully uploaded as: {{file_uploaded}}</p>
+        <p>The file was successfully uploaded as: <a href="{{collec_uploaded}}">{{collec_uploaded}}</a></p>
         <p><a href="/upload">Upload Another File</a></p>
-        <p><a href="/file_list">See All Uploaded Files</a></p>
    </body>
 </html>
