--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -1,7 +1,7 @@
 <html>
    <body>
        <h1>Success!</h1>
-        <p>The file was successfully uploaded as: <a href="{{collec_uploaded}}">{{collec_uploaded}}</a></p>
-        <p><a href="/upload">Upload Another File</a></p>
+        <p>The file was successfully uploaded as: <a href="{{collec_uploaded}}" target="_blank">{{collec_uploaded}}</a></p>
+        <p><a href="/upload" >Upload Another File</a></p>
    </body>
 </html>
