--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-      <h1>File Upload</h1>
+      <h1 style="color:Orange;">File Upload</h1>
       <form action = "/uploader" method = "POST" 
          enctype = "multipart/form-data">
          <h3>SynBioHub</h3>
