make error checking easier

--- a/templates/upload_failure.html
+++ b/templates/upload_failure.html
@@ -3,6 +3,8 @@
        <h1>Failure!</h1>
         <p>The file was not uploaded as: {{collec_uploaded}}</p>
         <p>This may be due to the collection name already existing on SynBioHub</p>
+        <p>The full error is shown below</p>
+        <p>{{error_message}}</p>
         <p><a href="/upload">Try again</a></p>
    </body>
 </html>
