--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,7 +9,7 @@
          <label for="pwd1">Password</label><br>
          <input type="password" id="sbhpwd" name="sbhpwd"><br>
          <label for="collec1">Submission Collection Name</label><br>
-         <input type="text" id="sbhcollec" name="sbhcollec"><br>
+         <input type="text" id="sbhcollec" name="sbhcollec" pattern="[a-z,A-Z,0-9]"><br>
          <label for="overwrite1">Overwrite Collections of the same name?</label><br>
          <input type="checkbox" id="sbhover" name="sbhover"><br>
          <br>
